package com.educationonline.backend.entities;

public enum AccountType {

     STUDENT,
        TEACHER,
        ADMIN
}
