package com.educationonline.backend.entities;

public enum BadgeEventType {
 LESSON_COMPLETED,
    COURSE_COMPLETED,
    QUIZ_SUBMITTED,
    POINTS_UPDATED,
    LOGIN, TOP_STUDENT, STREAK
}
