package com.educationonline.backend.entities;

public enum QuizType {

    LESSON_QUIZ,
    COURSE_QUIZ
}
