package com.educationonline.backend.entities;

public enum StudentLevel {

     MIDDLE_SCHOOL,
    HIGH_SCHOOL
}
