package com.educationonline.backend.entities;


public enum StudyLevel {

    BEGINNER,
    ELEMENTARY,
    INTERMEDIATE,
    ADVANCED,
    MASTER
}
